--- a/app/src/main/res/layout/activity_eshop_main.xml
+++ b/app/src/main/res/layout/activity_eshop_main.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".feature.EShopMainActivity">
+    android:orientation="vertical">
 
     <!-- 用于放置主页面四个Fragment -->
     <FrameLayout
